--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 
     <body>
         <h1>anixsam</h1>
-        The HTML content goes here.
+        <img src="https://octodex.github.com/images/vinyltocat.png">
     </body>
 </html>
