--- a/index.html
+++ b/index.html
@@ -6,5 +6,11 @@
     <body>
         <h1>anixsam</h1>
         <img src="https://octodex.github.com/images/vinyltocat.png">
+        <ol>
+            <li>This</li>
+            <li>Is an</li>
+            <li>Ordered list</li>
+        </ol>
+
     </body>
 </html>
