--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <ol>
             <li>This</li>
             <li>Is an</li>
-            <li>Ordered list</li>
+            <li><a href="https://github.com">This is a link to GitHub!</a></li>
         </ol>
 
     </body>
